fixed footer spacing

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -301,7 +301,7 @@ footer {
 }
 
 .last-section {
-	margin-top: 2rem;
+	margin: 2rem 0 7rem 0;
 	display: flex;
 }
 
